syntax = "proto3";

package proto;

option go_package = "swrc/proto/pb";

message ChooseSnippetTopicSolutionRequest{
    string snippet_topic_id = 1;
    string snippet_id = 2;
}